scoots fixed contrast reservation page

--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -409,7 +409,7 @@ section .vehicles{
 }
 
 .label-agreement{
-    color: #f00;
+    color: #D60000;
 }
 
 .grid-columns h3{
